Added Networks and POP projects

--- a/resume.tex
+++ b/resume.tex
@@ -117,7 +117,7 @@
 \vspace{-0.1cm}
 \\
 \noindent
-\projecttopic{B. Tech CSE \big \vert \hspace{3pt} CGPA 9.94} \hfill \mycal{Jul '21 - Present} 
+\projecttopic{B. Tech CSE \big \vert \hspace{3pt} CGPA 9.94/10} \hfill \mycal{Jul '21 - Present} 
 \vspace{-0.1cm} \\
 \projectdesc{Indian Institute of Technology Madras}  \hfill \myloc{Chennai, TN}
 \vspace{-0.2cm} \\
@@ -144,7 +144,7 @@
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.1em}
     \item Worked in the Quant Research \& Data Team of Optiver Delta1
-    \item Added functionality to create TCP/IP filters from session configuration files for the Network Parser and optimised them for performance.
+    \item Added functionality to create TCP/IP filters from session configuration files for packet parsers and optimised them for performance.
     \item Added functionality to convert timestamps across timezones, accounting for Daylight Saving Time changes 
     \item Analysed SQL queries and designed a new OneTick database with Schema to replace a saturated PostGres time series database.
 \end{itemize}
@@ -162,24 +162,26 @@
     among over 25 teams globally to represent the country.
 \end{itemize}
 \vspace{3pt}
-
 \noindent
-\hrulefill \\ [-0.5cm]
-\projecttopic{Undergraduate Research - WiFi Sensing for IoT} \hfill  \mycal{Jan'24 - May'24}
+\hrulefill \\ [-0.45cm]
+\projecttopic{WiFi Sensing for IoT using Machine Learning} \hfill  \mycal{Jan'24 - May'24}\\[0.1cm]
+\projectdesc{Undergraduate Research Project under Prof. Ayon Chakraborty}  
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.1em}
-    \item Created an end-to-end IoT pipeline for Human Activity Recognition using WiFi CSI (Channel State Information) Sensing
+    \item Created an end-to-end IoT pipeline for real-time Human Activity Recognition using WiFi CSI (Channel State Information) Sensing and Machine Learning on the Server
     \item Analysed the effect of compression on CSI data and its tradeoffs on the Network Bandwidth, Energy Consumption \& Sensing Accuracy.
-    \item Submitted part of the work in AIoT workshop organised in Athens, Greece. 
+    \item Submitted the work in AIoT workshop organised in Athens, Greece. 
 \end{itemize}
+\vspace{3pt}
 \noindent
-\projecttopic{Undergraduate Research - Custom Protocol Headers with P4 \\ for Network Application Support} \hfill \mycal{Ongoing}
+\hrulefill \\ [-0.45cm]
+\projecttopic{Custom Protocol Headers for Network Support} \hfill \mycal{Ongoing}\\[0.1cm]
+\projectdesc{Undergraduate Research Project under Prof. Krishna Moorthy Sivalingam}  
 \vspace{1pt}
-\hrule 
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.1em}
     \item Ideation of a custom protocol header to improve network telemetry or security using P4 switch data plane programming language.
-    \item Implementation with be done on Intel Tofino switches  
+    \item Deployment \& Testing on Intel Tofino switches  
 \end{itemize}
 \vspace{3pt}
 
@@ -228,7 +230,7 @@
 \noindent
 \resheading{\subheadingfont{SCHOLASTIC ACHIEVEMENTS}}
 \begin{itemize}[leftmargin=\myMargin]
-\setlength \itemsep{-0.1em}
+\setlength \itemsep{-0.2em}
 \item Awarded Sri V Ramachandran Prize for \textbf{Highest CGPA} in Semesters 3 \& 4 of B.Tech and Dual Degree in Computer Science 
 \item Secured \textbf{AIR 5} in JEE Mains '19 out of 1 million students  %\hfill {[20XX]}%
 \item Secured \textbf{AIR 161} in JEE Advanced '19\hfill
@@ -267,7 +269,7 @@
 \noindent
 \vspace{-0.5cm}
 \begin{itemize}[leftmargin=\myMargin]
-    \item Implemented a MIPS compiler for a subset of Java with Lexical Analyser, Parsing, Type Checking, IR Generation, Register Allocation, Stack Handling, and MIPS code generation
+    \item Designed a MIPS compiler for a subset of Java with Lexical Analyser, Parsing, Type Checking, IR Generation, Register Allocation, Stack Handling, and MIPS code generation
 \end{itemize}
 \vspace{5pt}
 
@@ -280,9 +282,39 @@
 \noindent
 \vspace{-0.5cm}
 \begin{itemize}[leftmargin=\myMargin]
-    \setlength \itemsep{-0.1em}
+    \setlength \itemsep{-0.2em}
     \item Implemented a Memory Management Unit with LRU Page replacement Policy
     \item Implemented a Multi-Level Feedback Queue Scheduler for processes
+\end{itemize}
+\vspace{5pt}
+
+\noindent
+\hrulefill \\ [-0.5cm]
+\projecttopic{LAN Chat Server \& Music Streaming}
+\mylink{insert link here}
+\hfill    \textcolor{projDescColor}{\textit{C}}  \\[0.1cm]
+\projectdesc{CS3205 Course Project - Prof. Ayon Chakraborty} \hfill \mycal{Jan-May '23} \\
+\noindent
+\vspace{-0.5cm}
+\begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.2em}
+    \item Implemented a LAN Chat Server from scratch using C Socket API
+    \item Implemented a Music Streaming Server and Client using C Socket API and Unix ALSA Library 
+\end{itemize}
+\vspace{5pt}
+
+\noindent
+\hrulefill \\ [-0.5cm]
+\projecttopic{Prolog \& Functional Programming Interpreter}
+\mylink{insert link here}
+\hfill    \textcolor{projDescColor}{\textit{OCaml, Prolog}}  \\[0.1cm]
+\projectdesc{CS3100 Course Project - Prof. Kartik Nagar} \hfill \mycal{Jan-May '23} \\
+\noindent
+\vspace{-0.5cm}
+\begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.2em}
+    \item Implemented a Prolog interpreter in OCaml
+    \item Implemented a basic functional programming language using Logic Programming in Prolog
 \end{itemize}
 \vspace{5pt}
 
@@ -296,7 +328,7 @@
 \noindent
 \vspace{-0.2cm}
 \begin{itemize}[leftmargin=\myMargin]
-    \setlength \itemsep{-0.1em}
+    \setlength \itemsep{-0.2em}
     \item Implemented a CPU with \textbf{Register file} and \textbf{ALU} with instructions to perform Arithmetic 
     and Logical operations on both 8-bit integers and  12-bit floating-point numbers
     \item Built a combinational 8-bit CPU with structural gate-level Verilog 
