Add courses and finalised layout

--- a/resume.tex
+++ b/resume.tex
@@ -152,38 +152,25 @@
 
 \noindent
 \hrulefill \\ [-0.5cm]
-\projecttopic{Team Avishkar Hyperloop, C\textcolor{red}{FI}} \hfill \mycal{Oct '22 - Present} 
+\projecttopic{Team Avishkar Hyperloop, C\textcolor{red}{FI}} \hfill \mycal{Oct '22 - Jul'23} 
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.1em}
     \item Part of Embedded Software Team of the \textbf{Main Control Unit} and \\ \textbf{Navigation Unit} of our Hyperloop Pod. 
-    \item Used \textbf{RTOS, threading} and communication protocols like MQTT, CAN, etc. to collect and store data from over 20 sensors at \textbf{low latency}, \textbf{handling errors} appropriately.
-    % \item Used communication protocols like MQTT, CAN, etc to collect data and send data to the base station/on-Pod Storage.
-    \item Participated in the prestigious \textbf{European Hyperloop Week - Scotland 2023}, 
-    among over 25 teams globally to represent the country.
+    \item Used \textbf{RTOS} to collect and store data from over 20 sensors using various communication protocols at \textbf{low latency}.
+    \item Demonstrated our Hyperloop Pod in the prestigious \textbf{European Hyperloop Week - Scotland 2023} 
+    among over 25 teams globally, and were runner-ups in the Best Sense and Control System award.
 \end{itemize}
 \vspace{3pt}
+
+
 \noindent
-\hrulefill \\ [-0.45cm]
-\projecttopic{WiFi Sensing for IoT using Machine Learning} \hfill  \mycal{Jan'24 - May'24}\\[0.1cm]
-\projectdesc{Undergraduate Research Project under Prof. Ayon Chakraborty}  
+\hrulefill \\ [-0.5cm]
+\projecttopic{Teaching Assistant, CSE Dept, IIT Madras} \hfill \mycal{Aug '24 - Present} 
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.1em}
-    \item Created an end-to-end IoT pipeline for real-time Human Activity Recognition using WiFi CSI (Channel State Information) Sensing and Machine Learning on the Server
-    \item Analysed the effect of compression on CSI data and its tradeoffs on the Network Bandwidth, Energy Consumption \& Sensing Accuracy.
-    \item Submitted the work in AIoT workshop organised in Athens, Greece. 
+    \item Worked as a Teaching Assistant and designed Verilog labs for Computer System Design course under Dr. Sutanu Chakraborty
 \end{itemize}
-\vspace{3pt}
-\noindent
-\hrulefill \\ [-0.45cm]
-\projecttopic{Custom Protocol Headers for Network Support} \hfill \mycal{Ongoing}\\[0.1cm]
-\projectdesc{Undergraduate Research Project under Prof. Krishna Moorthy Sivalingam}  
-\vspace{1pt}
-\begin{itemize}[leftmargin=\myMargin]
-    \setlength \itemsep{-0.1em}
-    \item Ideation of a custom protocol header to improve network telemetry or security using P4 switch data plane programming language.
-    \item Deployment \& Testing on Intel Tofino switches  
-\end{itemize}
-\vspace{3pt}
+\vspace{5pt}
 
 \noindent
 \hrulefill \\ [-0.5cm]
@@ -195,30 +182,76 @@
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\noindent
+\resheading{\subheadingfont{CODING ACHIEVEMENTS}}
+\small
+ \begin{itemize}[ leftmargin=\myMargin]
+    \setlength \itemsep{-0.2em}
+  \item Rating 1806 \textcolor{blue}{Expert} on Codeforces
+%   \item Maximum Rating 1653 \textcolor{blue}{(3 \includegraphics[scale=0.03]{bluestar.png})} on CodeChef
+  \item \textbf{ICPC 2022} - \textbf{AIR 151} and \textbf{Institute Rank 7} in Kanpur Qualifiers
+\item \textbf{AIR 3} in Shaastra CP Potpourri (Mixed-bag coding contest) \\ \small {\textit{[Shaastra is Asia's largest student-run Techfest]}} 
+    \item { \textbf{Global Rank 9} in CodeChef Starters 96} 
+    \item { \textbf{Global Rank 231} in Codeforces Round 881} 
+    \item {1st place in Inter-School Java Competition in Mumbai}
+  \end{itemize}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\noindent
+\resheading{\subheadingfont{KEY COURSES \& LABS}}
+\begin{multicols}{2} 
+    \vspace{-0.2cm}
+    \scriptsize
+\begin{itemize}[ leftmargin=\myMargin]
+    \setlength \itemsep{-0.2em}
+    \item  Computer System Design
+    \item Data Structures
+    \item Computer Architecture
+    \item Theory of Computation
+    \item Object Oriented Programming
+    \item Compiler Design
+    \item Operating Systems
+    \item Functional \& Logical Programming
+    \item Computer Networks
+    \item Pattern Recognition \& Machine Learning
+    \item Router Architecture \& Algorithms $\dagger$ 
+    \item Principles of Economics
+    \item Microeconomics
+    \item Macroeconomics
+    \item Introduction to Game Theory
+    \item Probability Theory $\dagger$ 
+    \item Combinatorics $\dagger$
+    \item Linear Programming and Combinatorial Optimisation $\dagger$ 
+    \item Linear Algebra $\dagger$ 
+\end{itemize}
+\end{multicols}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
 \noindent
 \resheading{\subheadingfont{SOFTWARE SKILLS}}
-\vspace{-0.4cm}
+\vspace{-0.35cm}
  \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.1em}
   \item \textbf{Languages}: C++, C, HDL (Verilog), OCaml, Python, Java, Prolog, SQL, x86, MIPS and 8085 ASM, HTML \& CSS, R 
   \item \textbf{Tools}: TI CCS, Git, \textbf{\LaTeX}, AutoCAD, GDB
 \item \textbf{Libraries}: TI RTOS, NumPy, PyLops, Matplotlib
-\vspace{-0.2cm}
   \end{itemize}
   
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \vspace{-0.1cm}
 \noindent
 \resheading{\subheadingfont{EXTRACURRICULAR ACTIVITIES}}
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.1em}
 \item \textbf{Sports:} 
-    Awarded 13 medals in various Track \& Field events and Best Athlete U14 in High School, Taekwondo Red Dan II Belt, NSO Athlete at IITM
-\item Mentored freshmen, personally and academically, under \textbf{Saathi, IIT Madras}
+    Awarded 13 medals in Track \& Field and Best Athlete U14 in High School, Taekwondo Red Dan II Belt, NSO Athlete at IITM
+\item Mentored incoming freshmen under \textbf{Saathi, IIT Madras}
 \end{itemize}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -241,24 +274,32 @@
 \end{itemize} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\noindent
-%\resheading{\subheadingfont{CODING ACHIEVEMENTS}}
-% \begin{itemize}[ leftmargin=\myMargin]
-%    \setlength \itemsep{-0.1em}
-%  \item Rating 1806 \textcolor{blue}{Expert} on Codeforces
-%%   \item Maximum Rating 1653 \textcolor{blue}{(3 \includegraphics[scale=0.03]{bluestar.png})} on CodeChef
-%  \item \textbf{ICPC 2022} - \textbf{AIR 151} and \textbf{Institute Rank 7} in Kanpur-Mathura Qualifier Round
-%\item \textbf{AIR 3} in Shaastra CP Potpourri (Mixed-bag coding contest) \\ \small {\textit{[Shaastra is Asia's largest student-run Techfest]}} 
-%    \item \normalsize{ \textbf{Global Rank 9} in CodeChef Starters 96} 
-%    \item \normalsize{ \textbf{Global Rank 231} in Codeforces Round 881} 
-%    \item \normalsize{ \textbf{Global Rank 373} in Google Farewell Round B} 
-%    \item  \normalsize {1st place in Inter-School Java Competition in Mumbai}
-%  \end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     
 \noindent
 \resheading{\subheadingfont{PROJECTS} }\\[0.1cm]
+
+\noindent
+\hrulefill \\ [-0.45cm]
+\projecttopic{WiFi Sensing for IoT using Machine Learning} \hfill \textcolor{projDescColor}{\textit{C, Python}} \\ [0.1cm]
+\projectdesc{Undergraduate Research Project under Prof. Ayon Chakraborty}
+\begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.1em}
+    \item Created an end-to-end IoT pipeline for real-time Human Activity Recognition using WiFi CSI (Channel State Information) Sensing and Machine Learning on the Server
+    \item Analysed the effect of compression on CSI data and its tradeoffs on the Network Bandwidth, Energy Consumption \& Sensing Accuracy.
+    \item Submitted the work in AIoT workshop organised in Athens, Greece. 
+\end{itemize}
+\vspace{3pt}
+\noindent
+\hrulefill \\ [-0.45cm]
+\projecttopic{Custom Protocol Headers for Network Support} \hfill \textcolor{projDescColor}{\textit{P4, Python}}\\[0.1cm]
+\projectdesc{Undergraduate Research Project under Prof. Krishna Moorthy Sivalingam}
+\vspace{1pt}
+\begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.1em}
+    \item Ideation of a custom protocol header to improve network telemetry or security using P4 switch data plane programming language.
+    \item Deployment \& Testing on Intel Tofino switches  
+\end{itemize}
+\vspace{3pt}
 
 \noindent
 \hrulefill \\ [-0.5cm]
@@ -326,7 +367,7 @@
 \projectdesc{CS2610 Course Project - Prof. C. Chandra Sekhar} \hfill \mycal{Jan-May '23} \\
 \projectdesc{CS2310 Course Project - Prof. Ayon Chakraborty} \hfill \mycal{Jul-Nov '22}
 \noindent
-\vspace{-0.2cm}
+\vspace{-0.1cm}
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.2em}
     \item Implemented a CPU with \textbf{Register file} and \textbf{ALU} with instructions to perform Arithmetic 
@@ -345,52 +386,6 @@
     \item Implemented the CENDY algorithm, an on-line algorithm for updating Average Path Length and Closeness Centrality in a Dynamic Graph, based on this paper. \ \mylink{https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6729571&isnumber=6729471}
  \end{itemize}
 \vspace{-0.2cm}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\noindent
-\resheading{\subheadingfont{COURSES \& LABS}}
-\small
-\textbf{Computer Science}
-\vspace{-0.3cm}
-\begin{multicols}{2} 
-    \scriptsize
-\begin{itemize}[ leftmargin=\myMargin]
-    \setlength \itemsep{-0.2em}
-    \item Hi
-    \columnbreak
-    \item Hi
-\end{itemize}
-\end{multicols}
-\noindent
-\textbf{Mathematics}
-\vspace{-0.3cm}
-\begin{multicols}{2} 
-    \scriptsize
-\begin{itemize}[ leftmargin=\myMargin]
-    \setlength \itemsep{-0.2em}
-    \item Hi
-    \columnbreak
-    \item Hi
-\end{itemize}
-\end{multicols}
-\noindent
-\textbf{Economics}
-\vspace{-0.3cm}
-\begin{multicols}{2} 
-    \scriptsize
-\begin{itemize}[ leftmargin=\myMargin]
-    \setlength \itemsep{-0.2em}
-    \item Hi
-    \columnbreak
-    \item Hi
-\end{itemize}
-\end{multicols}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
