--- a/resume.tex
+++ b/resume.tex
@@ -97,9 +97,9 @@
  \href{https://www.linkedin.com/in/snehadeep-gayen/}{\includegraphics[scale=0.05]{linkedin.png}} \ \href{https://codeforces.com/profile/Snehadeep}{\includegraphics[scale=0.06]{cf.png} \ } 
             }}
             \\
-            \textbf{B. Tech Computer Science and Engineering}
+            \textbf{B. Tech Computer Science and Engineering with Honors}
             \\
-            {\textit{Minor in Mathematics}} 
+            {\textbf{\textit{Minor in Mathematics}}} 
             \\
             {Indian Institute of Technology, Madras} 
             \\
@@ -215,15 +215,17 @@
     \item Functional \& Logical Programming
     \item Computer Networks
     \item Pattern Recognition \& Machine Learning
-    \item Router Architecture \& Algorithms $\dagger$ 
+    \item Router Architecture \& Algorithms $\dagger *$ 
     \item Principles of Economics
-    \item Microeconomics
-    \item Macroeconomics
+    \item Microeconomics $*$
+    \item Macroeconomics $*$
     \item Introduction to Game Theory
     \item Probability Theory $\dagger$ 
     \item Combinatorics $\dagger$
     \item Linear Programming and Combinatorial Optimisation $\dagger$ 
     \item Linear Algebra $\dagger$ 
+    \item $\dagger$ - Graduate Level Course
+    \item * - Ongoing
 \end{itemize}
 \end{multicols}
 
@@ -234,25 +236,11 @@
 \vspace{-0.35cm}
  \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.1em}
-  \item \textbf{Languages}: C++, C, HDL (Verilog), OCaml, Python, Java, Prolog, SQL, x86, MIPS and 8085 ASM, HTML \& CSS, R 
-  \item \textbf{Tools}: TI CCS, Git, \textbf{\LaTeX}, AutoCAD, GDB
+  \item \textbf{Languages}: C++, C, HDL (Verilog), OCaml, Python, Java, Prolog, SQL, x86, MIPS and 8085 ASM, \LaTeX, HTML \& CSS, R,
+  \item \textbf{Tools}: CMake, Make, git, gdb/lldb, TI CCS, AutoCAD, GTKWave 
 \item \textbf{Libraries}: TI RTOS, NumPy, PyLops, Matplotlib
   \end{itemize}
   
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\vspace{-0.1cm}
-\noindent
-\resheading{\subheadingfont{EXTRACURRICULAR ACTIVITIES}}
-\begin{itemize}[leftmargin=\myMargin]
-    \setlength \itemsep{-0.1em}
-\item \textbf{Sports:} 
-    Awarded 13 medals in Track \& Field and Best Athlete U14 in High School, Taekwondo Red Dan II Belt, NSO Athlete at IITM
-\item Mentored incoming freshmen under \textbf{Saathi, IIT Madras}
-\end{itemize}
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -286,12 +274,12 @@
     \setlength \itemsep{-0.1em}
     \item Created an end-to-end IoT pipeline for real-time Human Activity Recognition using WiFi CSI (Channel State Information) Sensing and Machine Learning on the Server
     \item Analysed the effect of compression on CSI data and its tradeoffs on the Network Bandwidth, Energy Consumption \& Sensing Accuracy.
-    \item Submitted the work in AIoT workshop organised in Athens, Greece. 
+    \item Submitted part of the work in \textbf{AIoT workshop organised in Athens, Greece.} 
 \end{itemize}
-\vspace{3pt}
+\vspace{3pt} 
 \noindent
 \hrulefill \\ [-0.45cm]
-\projecttopic{Custom Protocol Headers for Network Support} \hfill \textcolor{projDescColor}{\textit{P4, Python}}\\[0.1cm]
+\projecttopic{Custom Protocol Headers for Network Support} \textit{*Ongoing} \hfill \textcolor{projDescColor}{\textit{P4, Python}}\\[0.1cm]
 \projectdesc{Undergraduate Research Project under Prof. Krishna Moorthy Sivalingam}
 \vspace{1pt}
 \begin{itemize}[leftmargin=\myMargin]
@@ -302,65 +290,50 @@
 \vspace{3pt}
 
 \noindent
-\hrulefill \\ [-0.5cm]
-\projecttopic{Java Compiler Design }
-\mylink{insert link here}
+\hrulefill \\ [-0.45cm]
+\projecttopic{Java Compiler Design}
+\mylink{https://github.com/Snehadeep-Gayen/Compiler-Design-HW}
 \hfill    \textcolor{projDescColor}{\textit{Java, C}}  \\[0.1cm]
 \projectdesc{CS3300 Course Project - Prof. Krishna Nandivada} \hfill \mycal{Jan-May '23} \\
 \noindent
-\vspace{-0.5cm}
+\vspace{-0.4cm}
 \begin{itemize}[leftmargin=\myMargin]
     \item Designed a MIPS compiler for a subset of Java with Lexical Analyser, Parsing, Type Checking, IR Generation, Register Allocation, Stack Handling, and MIPS code generation
 \end{itemize}
 \vspace{5pt}
 
 \noindent
-\hrulefill \\ [-0.5cm]
+\hrulefill \\ [-0.45cm]
 \projecttopic{OS Scheduler and Memory Management Unit Design}
-\mylink{insert link here}
+\mylink{https://github.com/Snehadeep-Gayen/OS_CS3500}
 \hfill    \textcolor{projDescColor}{\textit{Java}}  \\[0.1cm]
 \projectdesc{CS3500 Course Project - Prof. Prashant LA} \hfill \mycal{Jan-May '23} \\
 \noindent
-\vspace{-0.5cm}
+\vspace{-0.4cm}
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.2em}
-    \item Implemented a Memory Management Unit with LRU Page replacement Policy
-    \item Implemented a Multi-Level Feedback Queue Scheduler for processes
+    \item Developed a Multi-Level Feedback Queue for OS process scheduling.
+    \item Designed and implemented a Memory Management Unit with an LRU page replacement policy.
 \end{itemize}
 \vspace{5pt}
 
 \noindent
-\hrulefill \\ [-0.5cm]
+\hrulefill \\ [-0.45cm]
 \projecttopic{LAN Chat Server \& Music Streaming}
-\mylink{insert link here}
+\mylink{https://github.com/Snehadeep-Gayen/Networks-Assignments/tree/main/a2}
 \hfill    \textcolor{projDescColor}{\textit{C}}  \\[0.1cm]
 \projectdesc{CS3205 Course Project - Prof. Ayon Chakraborty} \hfill \mycal{Jan-May '23} \\
 \noindent
-\vspace{-0.5cm}
+\vspace{-0.4cm}
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.2em}
-    \item Implemented a LAN Chat Server from scratch using C Socket API
-    \item Implemented a Music Streaming Server and Client using C Socket API and Unix ALSA Library 
+    \item Built a LAN Chat Server from scratch using only C Socket API
+    \item Developed a Music Streaming Server and Client using C Socket API and Unix ALSA Library 
 \end{itemize}
 \vspace{5pt}
 
 \noindent
-\hrulefill \\ [-0.5cm]
-\projecttopic{Prolog \& Functional Programming Interpreter}
-\mylink{insert link here}
-\hfill    \textcolor{projDescColor}{\textit{OCaml, Prolog}}  \\[0.1cm]
-\projectdesc{CS3100 Course Project - Prof. Kartik Nagar} \hfill \mycal{Jan-May '23} \\
-\noindent
-\vspace{-0.5cm}
-\begin{itemize}[leftmargin=\myMargin]
-    \setlength \itemsep{-0.2em}
-    \item Implemented a Prolog interpreter in OCaml
-    \item Implemented a basic functional programming language using Logic Programming in Prolog
-\end{itemize}
-\vspace{5pt}
-
-\noindent
-\hrulefill \\ [-0.5cm]
+\hrulefill \\ [-0.45cm]
 \projecttopic{CPU Design} \mylink{https://github.com/Snehadeep-Gayen/Computer-Organisation-and-Architecture-Lab} 
 \mylink{https://github.com/Snehadeep-Gayen/Simple_CPU_Design} 
 \hfill    \textcolor{projDescColor}{\textit{Verilog}}  \\[0.1cm]
@@ -377,17 +350,25 @@
 \vspace{5pt}
 
 \noindent
-\hrulefill \\ [-0.5cm]
+\hrulefill \\ [-0.45cm]
 \projecttopic{Closeness Centrality Algorithm} \mylink{https://github.com/Snehadeep-Gayen/CENDY-Incremental-CC}
  \hfill \textcolor{projDescColor}{\textit{C++}} \\ [0.1cm]
 \projectdesc{Project under Prof. Manikandan Narayanan} \hfill \mycal{May-Jun '23}
-\vspace{-0.2cm}
+\vspace{-0.1cm}
 \begin{itemize}[leftmargin=\myMargin]
     \item Implemented the CENDY algorithm, an on-line algorithm for updating Average Path Length and Closeness Centrality in a Dynamic Graph, based on this paper. \ \mylink{https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6729571&isnumber=6729471}
  \end{itemize}
-\vspace{-0.2cm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\noindent
+\resheading{\subheadingfont{EXTRACURRICULAR ACTIVITIES}}
+\begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.1em}
+\item \textbf{Sports:} 
+    Awarded 13 medals in Track \& Field and Best Athlete U14 in High School, Taekwondo Red Dan II Belt, NSO Athlete at IITM
+\item Mentored incoming freshmen under \textbf{Saathi, IIT Madras}
+\end{itemize}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{multicols*}
 \end{document}
